Delineato Main e finiti bottoni

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
     <!--INIZIO MAIN-->
     <main>
         <div class="contenitore-main">
-            <div class="btn1">
+            <div class="btn" id="btn1">
                Add task
             </div>
-            <div class="btn2">
+            <div class="btn" id="btn2">
                 Add section
             </div>
+            <hr>
         </div>
+        
     </main>
 
 
