--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
                 Add section
             </div>
             <hr>
+            <ul class="lista">
+                <li class="head-list">&#9662; New Task
+                    <ul>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                    </ul>
+                </li>
+                <li class="head-list">&#9662; New Task
+                    <ul>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                    </ul>
+                </li>
+                <li class="head-list">&#9662; New Task
+                    <ul>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                    </ul>
+                </li>
+
+            </ul>
         </div>
         
     </main>
