Lista aggiornata con spunte

--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
             <ul class="lista">
                 <li class="head-list">&#9662; New Task
                     <ul>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Quarterly Newsletter<span>final button</span></li>
                     </ul>
                 </li>
-                <li class="head-list">&#9662; New Task
+                <li class="head-list">&#9662; Today
                     <ul>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Recruiting Blog Post <span>final button</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Mobile App Launch<span>final button</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Interview John H.<span>final button</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Summit Update to Mobile Storefronts<span>final button</span></li>
                     </ul>
                 </li>
-                <li class="head-list">&#9662; New Task
+                <li class="head-list">&#9662; Upcoming
                     <ul>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
-                        <li class="remove-style">&#10003;Quarterly Newsletter</li>
+                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Schedule Meeting With Alex</li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Homepage Refresh</li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Onboard New Sales Team Members</li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Review Editorial Calendar</li>
                     </ul>
                 </li>
 
