Definiti Bottoni lista

--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
             <ul class="lista">
                 <li class="head-list">&#9662; New Task
                     <ul>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Quarterly Newsletter<span>final button</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Quarterly Newsletter<span class="btn-list" id="btn-editorial">Editorial</span></li>
                     </ul>
                 </li>
                 <li class="head-list">&#9662; Today
                     <ul>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Recruiting Blog Post <span>final button</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Mobile App Launch<span>final button</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Interview John H.<span>final button</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Summit Update to Mobile Storefronts<span>final button</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Recruiting Blog Post <span class="btn-list" id="btn-editorial">Editorial</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Mobile App Launch<span class="btn-list" id="btn-goals">Q1 Goals</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Interview John H.<span class="btn-list" id="btn-recruit">Recruiting</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Summit Update to Mobile Storefronts<span class="btn-list" id="btn-mobile">Mobile</span></li>
                     </ul>
                 </li>
                 <li class="head-list">&#9662; Upcoming
                     <ul>
-                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Schedule Meeting With Alex</li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Homepage Refresh</li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Onboard New Sales Team Members</li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Review Editorial Calendar</li>
+                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Schedule Meeting With Alex <span class="btn-list" id="btn-editorial">Editorial</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Homepage Refresh <span class="btn-list" id="btn-website">Website</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Onboard New Sales Team Members <span class="btn-list" id="btn-sales">Sales</span></li>
+                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Review Editorial Calendar <span class="btn-list" id="btn-editorial">Editorial</span></li>
                     </ul>
                 </li>
 
