--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!--INIZIO HEADER-->
     <div class="contenitore">
         <header>
-            <div class="logo">
+            <div class="logo vertical">
                 <img src="img/logot.png" alt="Logo Toboolist">
             </div>
-            <div class="logo-text">
+            <div class="logo-text vertical">
                 <h2>Toboolist</h2>
             </div>
             
