Ingranditi gli item arrow

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             </div>
             <hr>
             <ul class="lista">
-                <li class="head-list">&#9662; New Task
+                <li class="head-list"><span class="item-arrow">&#9662;</span> New Task
                     <ul>
                         <li class="remove-style font-lista "><span class="simboli" id="check">&#10004;</span>Quarterly Newsletter<span class="btn-list" id="btn-editorial">Editorial</span></li>
                     </ul>
                 </li>
-                <li class="head-list">&#9662; Today
+                <li class="head-list"><span class="item-arrow">&#9662;</span>  Today
                     <ul>
                         <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Recruiting Blog Post <span class="btn-list" id="btn-editorial">Editorial</span></li>
                         <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Mobile App Launch<span class="btn-list" id="btn-goals">Q1 Goals</span></li>
@@ -46,7 +46,7 @@
                         <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Summit Update to Mobile Storefronts<span class="btn-list" id="btn-mobile">Mobile</span></li>
                     </ul>
                 </li>
-                <li class="head-list">&#9662; Upcoming
+                <li class="head-list"><span class="item-arrow">&#9662;</span>  Upcoming
                     <ul>
                         <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Schedule Meeting With Alex <span class="btn-list" id="btn-editorial">Editorial</span></li>
                         <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Homepage Refresh <span class="btn-list" id="btn-website">Website</span></li>
