--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!--FINE HEADER-->
     <!--INIZIO MAIN-->
     <main>
+    <!--Buttons-->
         <div class="contenitore-main">
             <div class="btn" id="btn1">
                Add task
@@ -32,26 +33,28 @@
                 Add section
             </div>
             <hr>
+    <!--Lista--> 
+       
             <ul class="lista">
                 <li class="head-list"><span class="item-arrow">&#9662;</span> New Task
                     <ul>
-                        <li class="remove-style font-lista "><span class="simboli" id="check">&#10004;</span>Quarterly Newsletter<span class="btn-list" id="btn-editorial">Editorial</span></li>
+                        <li class="remove-style font-lista "><span class="simboli check">&#10004;</span>Quarterly Newsletter<span class="btn-list btn-editorial">Editorial</span></li>
                     </ul>
                 </li>
                 <li class="head-list"><span class="item-arrow">&#9662;</span>  Today
                     <ul>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Recruiting Blog Post <span class="btn-list" id="btn-editorial">Editorial</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Mobile App Launch<span class="btn-list" id="btn-goals">Q1 Goals</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Interview John H.<span class="btn-list" id="btn-recruit">Recruiting</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Summit Update to Mobile Storefronts<span class="btn-list" id="btn-mobile">Mobile</span></li>
+                        <li class="remove-style font-lista"><span class="simboli check">&#10004;</span>Recruiting Blog Post <span class="btn-list btn-editorial">Editorial</span></li>
+                        <li class="remove-style font-lista"><span class="simboli check">&#10004;</span>Mobile App Launch<span class="btn-list btn-goals">Q1 Goals</span></li>
+                        <li class="remove-style font-lista"><span class="simboli cross">&#10008;</span>Interview John H.<span class="btn-list btn-recruit">Recruiting</span></li>
+                        <li class="remove-style font-lista"><span class="simboli check">&#10004;</span>Summit Update to Mobile Storefronts<span class="btn-list btn-mobile">Mobile</span></li>
                     </ul>
                 </li>
                 <li class="head-list"><span class="item-arrow">&#9662;</span>  Upcoming
                     <ul>
-                        <li class="remove-style font-lista"><span class="simboli" id="cross">&#10008;</span>Schedule Meeting With Alex <span class="btn-list" id="btn-editorial">Editorial</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Homepage Refresh <span class="btn-list" id="btn-website">Website</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Onboard New Sales Team Members <span class="btn-list" id="btn-sales">Sales</span></li>
-                        <li class="remove-style font-lista"><span class="simboli" id="check">&#10004;</span>Review Editorial Calendar <span class="btn-list" id="btn-editorial">Editorial</span></li>
+                        <li class="remove-style font-lista"><span class="simboli cross">&#10008;</span>Schedule Meeting With Alex <span class="btn-list btn-editorial">Editorial</span></li>
+                        <li class="remove-style font-lista"><span class="simboli check">&#10004;</span>Homepage Refresh <span class="btn-list btn-website">Website</span></li>
+                        <li class="remove-style font-lista"><span class="simboli check">&#10004;</span>Onboard New Sales Team Members <span class="btn-list btn-sales">Sales</span></li>
+                        <li class="remove-style font-lista"><span class="simboli check">&#10004;</span>Review Editorial Calendar <span class="btn-list btn-editorial">Editorial</span></li>
                     </ul>
                 </li>
 
